# llmflow

./: .pre-commit-config.yaml  CONTRIBUTING.md  build.sh  pyproject.toml  readme.md
llmflow/metadatas/: BaseMetadata.py
llmflow/models/: classification.py
llmflow/prompts/classification/: LLMBaseClassifierFitPrompt.py
website/: package-lock.json
